@@ -13,7 +13,7 @@ local luatk = require "luatk"
 local fmt = require "format"
 
 local settings, uselanes_jump, uselanes_spob, uselanes_thr, pick_gui
-local reset_dist, reset_shield, compr_speed, compr_max, follow_jump, brake_pos
+local reset_dist, reset_shield, compr_speed, compr_max, match_fleet, follow_jump, brake_pos
 
 local AUTONAV_MAX_DIST  = 10e3 -- quite a reasonable distance
 local COMPR_SPEED_MIN   = 1e3 -- Old default was 5e3
@@ -35,6 +35,11 @@ function create ()
    reset_dist = var.peek("autonav_reset_dist") or 3e3
    compr_speed = var.peek("autonav_compr_speed") or 5e3
    compr_max = var.peek("autonav_compr_max") or 50
+   match_fleet = var.peek("autonav_match_fleet")
+   if match_fleet == nil then
+      match_fleet = true
+      var.push("autonav_match_fleet", true)
+   end
    follow_jump = var.peek("autonav_follow_jump")
    brake_pos = var.peek("autonav_brake_pos")
 
@@ -44,9 +49,9 @@ end
 
 function settings ()
    local txt_autonav, fad_autonav, txt_compr
-   local chk_uselanes_jump, chk_uselanes_spob, chk_follow_jump, chk_brake_pos
+   local chk_uselanes_jump, chk_uselanes_spob, chk_match_fleet, chk_follow_jump, chk_brake_pos
 
-   local w, h = 600, 500
+   local w, h = 600, 540
    local wdw = luatk.newWindow( nil, nil, w, h )
    wdw:setCancel( luatk.close )
    luatk.newText( wdw, 0, 10, w, 20, _("Player Settings"), nil, "center" )
@@ -124,6 +129,8 @@ function settings ()
    y = y + 30
    chk_uselanes_spob = luatk.newCheckbox( wdw, 20, y, w-40, 20, _("Use patrol lanes when travelling to a space object"), nil, uselanes_spob )
    y = y + 30
+   chk_match_fleet = luatk.newCheckbox( wdw, 20, y, w-40, 20, _("Match speed with slowest ship in fleet"), nil, match_fleet )
+   y = y + 30
    chk_follow_jump = luatk.newCheckbox( wdw, 20, y, w-40, 20, _("Jump to follow pilots"), nil, follow_jump )
    y = y + 30
    chk_brake_pos = luatk.newCheckbox( wdw, 20, y, w-40, 20, _("Brake when heading to a position"), nil, brake_pos )
@@ -142,11 +149,13 @@ function settings ()
          reset_dist = 3e3
          compr_speed = 5e3
          compr_max = 50
+         match_fleet = true
          follow_jump = false
          brake_pos = false
          update_autonav_value()
          chk_uselanes_jump:set( uselanes_jump )
          chk_uselanes_spob:set( uselanes_spob )
+         chk_match_fleet:set( match_fleet )
          chk_follow_jump:set( follow_jump )
          chk_brake_pos:set( brake_pos )
          fad_thr:set( uselanes_thr )
@@ -160,6 +169,7 @@ function settings ()
          var.push( "autonav_reset_dist", reset_dist )
          var.push( "autonav_compr_speed", compr_speed )
          var.push( "autonav_compr_max", compr_max )
+         var.push( "autonav_match_fleet", match_fleet )
          var.push( "autonav_follow_jump", follow_jump )
          var.push( "autonav_brake_pos", brake_pos )
 
@@ -173,6 +183,7 @@ function settings ()
    -- Save as variables
    uselanes_jump = chk_uselanes_jump:get()
    uselanes_spob = chk_uselanes_spob:get()
+   match_fleet = chk_match_fleet:get()
    follow_jump = chk_follow_jump:get()
    brake_pos = chk_brake_pos:get()
    var.push( "autonav_uselanes_jump", uselanes_jump )
@@ -182,6 +193,7 @@ function settings ()
    var.push( "autonav_reset_shield", reset_shield )
    var.push( "autonav_compr_speed", compr_speed )
    var.push( "autonav_compr_max", compr_max )
+   var.push( "autonav_match_fleet", match_fleet )
    var.push( "autonav_follow_jump", follow_jump )
    var.push( "autonav_brake_pos", brake_pos)
 end
